--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
 </head>
 <body>
     <h1>HOLA BUENOS DÍAS</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore, laboriosam repellat?
+       Quidem omnis aut quo distinctio eos molestias facere vero cumque. 
+       Id deleniti in non eaque consequatur repudiandae laboriosam cum.</p>
+       <nav>
+        <ul>
+            <li>
+                <a href="#">inicio</a>
+            </li>
+        </ul>
+    </nav>
+    
 </body>
 </html>
